--- a/computers/service.yml
+++ b/computers/service.yml
@@ -3,9 +3,9 @@ kind: Service
 metadata:
   name: computers-service
 spec:
-  type: ClusterIP
   selector:
     app: computers
   ports:
-  - port: 80
+  - protocol: TCP
+    port: 80
     targetPort: 80
