--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: CI/CD for Google Store (Full Stack)
+name: CI/CD to EC2 + ECR + EKS
 
 on:
   push:
@@ -6,92 +6,82 @@ on:
       - main
 
 env:
-  AWS_REGION: ap-northeast-1
-  ECR_REGISTRY: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.ap-northeast-1.amazonaws.com
-  SERVICES: "electronics phones computers earphones backend"
-  K8S_NAMESPACE: default
-  CLUSTER_NAME: abinash
-
-permissions:
-  contents: write
+  AWS_REGION: ap-northeast-1        # 🗺️ Your AWS region
+  ECR_REPOSITORY: google-shopping   # 🐳 Your ECR repository name
+  EC2_USER: ec2-user
+  CLUSTER_NAME: abinash             # 🧩 EKS cluster name
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repository
       - name: 🧾 Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Configure AWS credentials (must have EKS permissions)
-      - name: 🔧 Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
+      - name: ⚙️ Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v3
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      # 3️⃣ Login to Amazon ECR
-      - name: 📦 Login to Amazon ECR
-        uses: aws-actions/amazon-ecr-login@v2
-
-      # 4️⃣ Build, tag, and push Docker images
-      - name: 🛠 Build, tag, and push Docker images
+      - name: 🔑 Decode EC2 PEM key
         run: |
-          for service in $SERVICES; do
-            REPO_NAME="google-store-$service"
-            IMAGE_TAG="${{ github.sha }}"
+          echo "${{ secrets.EC2_PEM_B64 }}" | base64 -d > ec2-key.pem
+          chmod 600 ec2-key.pem
 
-            # Create ECR repo if it doesn't exist
-            aws ecr describe-repositories --repository-names $REPO_NAME >/dev/null 2>&1 || \
-              aws ecr create-repository --repository-name $REPO_NAME
-
-            # Build Docker image
-            docker build -t $ECR_REGISTRY/$REPO_NAME:$IMAGE_TAG ./$service
-
-            # Push to ECR
-            docker push $ECR_REGISTRY/$REPO_NAME:$IMAGE_TAG
-
-            # Update deployment YAML
-            if [ -f $service/deployment.yml ]; then
-              sed -i "s|image:.*|image: $ECR_REGISTRY/$REPO_NAME:$IMAGE_TAG|g" $service/deployment.yml
-            fi
-          done
-
-      # 5️⃣ Commit updated deployment files (optional)
-      - name: 🔄 Commit deployment changes
+      - name: 🐳 Build and Push Docker image to ECR
         run: |
-          git config --global user.name 'GitHub Actions'
-          git config --global user.email 'actions@github.com'
-          git add */deployment.yml
-          git commit -m "Update image tags in deployment files" || echo "No changes to commit"
-          git push || echo "Push failed, probably due to permissions"
+          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+          IMAGE_TAG=$(git rev-parse --short HEAD)-$(date +%Y%m%d%H%M%S)
+          IMAGE_URI=$ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
 
-      # 6️⃣ Configure kubectl for EKS
-      - name: ☸️ Connect to EKS cluster
+          echo "🧩 Using image URI: $IMAGE_URI"
+
+          # Create repo if not exists
+          aws ecr describe-repositories --repository-names $ECR_REPOSITORY >/dev/null 2>&1 || \
+            aws ecr create-repository --repository-name $ECR_REPOSITORY
+
+          # Build and push
+          docker build -t $IMAGE_URI .
+          aws ecr get-login-password --region $AWS_REGION | \
+            docker login --username AWS --password-stdin $ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com
+          docker push $IMAGE_URI
+
+          echo "$IMAGE_URI" > image_uri.txt
+
+      - name: 🚀 Transfer files to EC2
+        env:
+          EC2_HOST: ${{ secrets.EC2_HOST }}
         run: |
-          aws eks update-kubeconfig --name $CLUSTER_NAME --region $AWS_REGION --alias github-actions
-          kubectl config use-context github-actions
-          kubectl get nodes
+          scp -i ec2-key.pem -o StrictHostKeyChecking=no -r *.yml image_uri.txt $EC2_USER@$EC2_HOST:/home/$EC2_USER/
 
-      # 7️⃣ Deploy Kubernetes manifests
-      - name: 🚀 Deploy to Kubernetes
+      - name: 🧠 Deploy to EKS from EC2
+        env:
+          EC2_HOST: ${{ secrets.EC2_HOST }}
         run: |
-          # Apply ingress first (for path-based routing)
-          kubectl apply -f ingress.yml --validate=false
+          ssh -i ec2-key.pem -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
+            set -e
+            cd /home/$EC2_USER
+            IMAGE_URI=$(cat image_uri.txt)
+            
+            echo "🔧 Setting up kubeconfig for EKS cluster..."
+            aws eks update-kubeconfig --region $AWS_REGION --name $CLUSTER_NAME
+            
+            echo "✅ Checking cluster access..."
+            kubectl get nodes || (echo "❌ Kubeconfig access failed" && exit 1)
 
-          # Apply all services, deployments, and autoscalers
-          for service in $SERVICES; do
-            [ -f $service/service.yml ] && kubectl apply -f $service/service.yml
-            [ -f $service/deployment.yml ] && kubectl apply -f $service/deployment.yml
-            [ -f $service/autoscaler.yml ] && kubectl apply -f $service/autoscaler.yml
-          done
+            echo "📝 Updating deployment image..."
+            for deploy_file in *-deployment.yml; do
+              sed -i "s|image:.*|image: ${IMAGE_URI}|g" "$deploy_file"
+            done
 
-          # Apply main frontend deployment and service
-          [ -f deployment.yml ] && kubectl apply -f deployment.yml
-          [ -f service.yml ] && kubectl apply -f service.yml
+            echo "🚀 Applying Kubernetes manifests..."
+            kubectl apply -f . --validate=false
 
-      # 8️⃣ Verify deployment
-      - name: ✅ Verify resources
-        run: kubectl get pods,svc,ingress -n $K8S_NAMESPACE
+            echo "🌐 Applying ingress..."
+            kubectl apply -f ingress.yml --validate=false
+
+            echo "🎉 Deployment complete!"
+          EOF
