--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,81 +7,101 @@ on:
 
 env:
   AWS_REGION: ap-northeast-1
+  ECR_REGISTRY: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.ap-northeast-1.amazonaws.com
   SERVICES: "frontend backend electronics phones computers earphones"
-  EC2_USER: ec2-user
+  K8S_NAMESPACE: default
   CLUSTER_NAME: abinash
+
+permissions:
+  contents: write
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout code
+      # 1. Checkout the repository
       - name: 🧾 Checkout repository
         uses: actions/checkout@v4
 
       # 2. Configure AWS credentials
-      - name: ⚙️ Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v3
+      - name: 🔧 Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      # 3. Login to ECR
+      # 3. Login to Amazon ECR
       - name: 📦 Login to Amazon ECR
-        run: |
-          aws ecr get-login-password --region $AWS_REGION | \
-            docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.$AWS_REGION.amazonaws.com
+        uses: aws-actions/amazon-ecr-login@v2
 
-      # 4. Build Docker images and update deployment YAMLs
-      - name: 🐳 Build, push, and update YAMLs
+      # 4. Loop through all services, build Docker images, and push to ECR
+      - name: 🛠 Build, tag, and push Docker images
         run: |
-          ACCOUNT_ID=${{ secrets.AWS_ACCOUNT_ID }}
           for service in $SERVICES; do
-            echo "🛠 Processing $service ..."
-            SERVICE_DIR="./$service"
-            IMAGE_URI="$ACCOUNT_ID.dkr.ecr.$AWS_REGION/google-store-$service:$(date +%Y%m%d%H%M%S)"
+            if [ -d "$service" ]; then
+              echo "🚀 Processing $service..."
+              IMAGE_TAG="${{ github.sha }}"
+              REPO_NAME="google-store-$service"
+              
+              # Create ECR repository if not exists
+              aws ecr describe-repositories --repository-names $REPO_NAME >/dev/null 2>&1 || \
+                aws ecr create-repository --repository-name $REPO_NAME
 
-            # Create ECR repo if not exist
-            aws ecr describe-repositories --repository-names "google-store-$service" >/dev/null 2>&1 || \
-              aws ecr create-repository --repository-name "google-store-$service"
+              IMAGE_URI="$ECR_REGISTRY/$REPO_NAME:$IMAGE_TAG"
 
-            # Build & push image
-            docker build -t $IMAGE_URI $SERVICE_DIR
-            docker push $IMAGE_URI
+              # Build Docker image
+              docker build -t $IMAGE_URI ./$service
 
-            # Update deployment.yml if exists
-            if [ -f "$SERVICE_DIR/deployment.yml" ]; then
-              sed -i "s|image:.*|image: $IMAGE_URI|g" "$SERVICE_DIR/deployment.yml"
-              echo "✅ Updated deployment.yml for $service"
+              # Push image
+              docker push $IMAGE_URI
+
+              # Update deployment.yml image
+              if [ -f $service/deployment.yml ]; then
+                sed -i "s|image:.*|image: $IMAGE_URI|g" $service/deployment.yml
+              fi
+            else
+              echo "⚠️  Skipping $service, folder not found."
             fi
           done
 
-      # 5. Configure kubectl
-      - name: ☸️ Configure kubectl for EKS
+      # 5. Commit updated deployment files (if any)
+      - name: 🔄 Commit updated deployment files
         run: |
-          aws eks update-kubeconfig --region $AWS_REGION --name $CLUSTER_NAME
-          kubectl config current-context
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'actions@github.com'
+          git add */deployment.yml
+          git commit -m "Update image tags in deployment files" || echo "No changes to commit"
+          git push || echo "Push failed, probably due to permissions"
 
-      # 6. Deploy all YAMLs
-      - name: 🚀 Apply Kubernetes manifests recursively
+      # 6. Configure kubectl for EKS
+      - name: ☸️ Connect to EKS cluster
         run: |
+          aws eks update-kubeconfig --name $CLUSTER_NAME --region $AWS_REGION --alias github-actions
+          kubectl config use-context github-actions
+          kubectl get nodes
+
+      # 7. Apply all Kubernetes manifests
+      - name: 🚀 Apply Kubernetes manifests
+        run: |
+          # Apply all services and deployments
           for service in $SERVICES; do
-            SERVICE_DIR="./$service"
-            if [ -d "$SERVICE_DIR" ]; then
-              echo "Applying manifests for $service ..."
-              kubectl apply -f "$SERVICE_DIR" --validate=false
+            if [ -d "$service" ]; then
+              [ -f $service/service.yml ] && kubectl apply -f $service/service.yml
+              [ -f $service/deployment.yml ] && kubectl apply -f $service/deployment.yml
+              [ -f $service/autoscaler.yml ] && kubectl apply -f $service/autoscaler.yml
             fi
           done
 
-          # Apply ingress separately if exists at root
-          if [ -f "./ingress.yml" ]; then
-            echo "Applying ingress.yml ..."
-            kubectl apply -f ingress.yml --validate=false
-          fi
+          # Apply main frontend/backend deployments if exist
+          [ -f deployment.yml ] && kubectl apply -f deployment.yml
+          [ -f service.yml ] && kubectl apply -f service.yml
 
-      # 7. Verify deployment
-      - name: ✅ Verify all resources
+          # Apply ingress
+          [ -f ingress.yml ] && kubectl apply -f ingress.yml --validate=false
+
+      # 8. Verify deployment
+      - name: ✅ Verify resources
         run: |
-          kubectl get pods,svc,ingress -A
+          kubectl get pods,svc,ingress -n $K8S_NAMESPACE
