--- a/frontend/main/ingress.yml
+++ b/frontend/main/ingress.yml
@@ -6,7 +6,7 @@ metadata:
     kubernetes.io/ingress.class: nginx
 spec:
   rules:
-    - host: shop.example.com
+    - host: 
       http:
         paths:
           - path: /
@@ -51,4 +51,5 @@ spec:
                 name: payment-service
                 port:
                   number: 80
+
 
