--- a/frontend/main/service.yml
+++ b/frontend/main/service.yml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: main-frontend-service
+  name: main-service
   labels:
     app: main-frontend
 spec:
-  type: LoadBalancer   # 👈 makes it publicly accessible
+  type: LoadBalancer
   selector:
     app: main-frontend
   ports:
