--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -70,7 +70,7 @@ jobs:
 
           echo "🚀 Building backend..."
           aws ecr describe-repositories --repository-names $REPO_NAME >/dev/null 2>&1 || \
-            aws ecr.create-repository --repository-name $REPO_NAME
+            aws ecr create-repository --repository-name $REPO_NAME
 
           docker build -t $IMAGE_URI $FOLDER
           docker push $IMAGE_URI
@@ -80,12 +80,12 @@ jobs:
       - name: 🔄 Commit updated YAML files
         run: |
           git config --global user.name "GitHub Actions"
-          git.config --global user.email "actions@github.com"
+          git config --global user.email "actions@github.com"
 
           git add frontend/**/deployment.yml backend/backend-deployment.yml
 
-          git commit -m "🔄 Update image tags after build [skip ci]" || echo "⚠️ No YAML changes"
-          git push origin main || echo "⚠️ No changes to push"
+          git.commit -m "🔄 Update image tags after build [skip ci]" || echo "⚠️ No YAML changes"
+          git.push origin main || echo "⚠️ No changes to push"
 
       - name: 🧠 Skip loop if commit was automated
         if: contains(github.event.head_commit.message, '[skip ci]')
@@ -106,7 +106,7 @@ jobs:
             if [ -d "shopping-site" ]; then
               echo "📥 Pulling latest code..."
               cd shopping-site
-              git.pull origin.main
+              git pull origin main
             else
               echo "📦 Cloning fresh repo..."
               git clone https://github.com/${{ github.repository }} shopping-site
@@ -118,4 +118,3 @@ jobs:
             docker compose up -d --build
 
             echo "✅ Deployment complete!"
-
