--- a/frontend/computers/Dockerfile
+++ b/frontend/computers/Dockerfile
@@ -1,12 +1,12 @@
 FROM nginx:alpine
 
-# remove any default files
+# Remove default nginx files
 RUN rm -rf /usr/share/nginx/html/*
 
-# copy only static assets
-COPY index.html style.css script.js /usr/share/nginx/html/
+# Copy all assets (HTML, CSS, JS, images, etc.)
+COPY . /usr/share/nginx/html/
 
-# copy custom nginx config
+# Use custom nginx config
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
